Bump to 0.4.0-1.10.4-2.2.1