@@ -2,6 +2,8 @@
 
 # Activate the "livy" conda environment, discover "SPARK_HOME" and start livy
 bash -c 'source activate livy \
-         && cd $CONDA_PREFIX/bin \
+         && cd "${CONDA_PREFIX}/bin" \
          && source find-spark-home \
-         && $HOME/livy/bin/livy-server'
+         && export LIVY_SERVER_JAVA_OPTS="-Xms512m -Xmx512m -XX:+UseG1GC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -XX:+PrintTenuringDistribution -XX:+PrintGCApplicationStoppedTime -XX:+PrintPromotionFailure -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=10M -Xloggc:${MESOS_SANDBOX}/gc.log" \
+         && env | sort \
+         && ${HOME}/livy/bin/livy-server'
